[gd_scene load_steps=10 format=3 uid="uid://jhdlqsokif5o"]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://d06cvn5qmuvfv" path="res://assets/css/dokibh.png" id="2_6aldq"]
[ext_resource type="Texture2D" uid="uid://c4a21atlabdbr" path="res://assets/css/greyrect.png" id="2_p88hc"]
[ext_resource type="Texture2D" uid="uid://dc6n600vfnmgp" path="res://assets/css/eggoon.png" id="3_lsque"]
[ext_resource type="Texture2D" uid="uid://bb8yee4kwa6dt" path="res://assets/css/normalgoon.png" id="3_xvjye"]
[ext_resource type="Texture2D" uid="uid://d3cn5or0vkn23" path="res://assets/css/chonkgoon.png" id="4_228fn"]
[ext_resource type="Texture2D" uid="uid://cqgmyjw0vef1" path="res://assets/css/longgoon.png" id="5_adr2t"]
[ext_resource type="Texture2D" uid="uid://bpx3jen13addh" path="res://assets/css/tomato.png" id="7_iu1o4"]
[ext_resource type="Texture2D" uid="uid://bavfjxhor10w7" path="res://assets/css/question.png" id="9_f5vrd"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1")

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -177.0
offset_right = 256.0
offset_bottom = 178.0
grow_vertical = 2

[node name="AICountContainer" type="HSplitContainer" parent="Options"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 45.0

[node name="AIPlayers" type="Label" parent="Options/AICountContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "AI Players"
vertical_alignment = 1

[node name="AIPlayerCount" type="SpinBox" parent="Options/AICountContainer"]
layout_mode = 2
max_value = 3.0

[node name="Players" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -177.5
offset_right = 126.0
offset_bottom = 177.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Players"]
layout_mode = 0
offset_left = 26.0
offset_top = 7.0
offset_right = 229.0
offset_bottom = 30.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."
horizontal_alignment = 1

[node name="Start" type="Button" parent="Players"]
layout_mode = 0
offset_left = 68.0
offset_top = 307.0
offset_right = 193.0
offset_bottom = 336.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "READY!"

[node name="List" type="ItemList" parent="Players"]
layout_mode = 0
offset_left = 25.0
offset_top = 37.0
offset_right = 229.0
offset_bottom = 296.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="PortForward" type="Label" parent="Players"]
layout_mode = 0
offset_left = -124.0
offset_top = 375.0
offset_right = 128.0
offset_bottom = 429.0
theme_override_constants/line_spacing = 6
text = "If you want non-LAN clients to connect,
make sure the port 10567 in UDP
is forwarded on your router."

[node name="FindPublicIP" type="LinkButton" parent="Players"]
layout_mode = 0
offset_left = 200.0
offset_top = 409.5
offset_right = 408.0
offset_bottom = 432.5
text = "Find your public IP address"

[node name="Connect" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -83.0
offset_right = 139.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="NameLabel" type="Label" parent="Connect"]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 56.0
offset_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="Name" type="LineEdit" parent="Connect"]
layout_mode = 0
offset_left = 17.0
offset_top = 38.0
offset_right = 173.0
offset_bottom = 69.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Dragoon"

[node name="IPLabel" type="Label" parent="Connect"]
layout_mode = 0
offset_left = 15.0
offset_top = 74.0
offset_right = 57.0
offset_bottom = 97.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
layout_mode = 0
offset_left = 17.0
offset_top = 102.0
offset_right = 173.0
offset_bottom = 133.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect"]
layout_mode = 0
offset_left = 181.0
offset_top = 38.0
offset_right = 246.0
offset_bottom = 69.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="Connect"]
layout_mode = 0
offset_left = 181.0
offset_top = 102.0
offset_right = 246.0
offset_bottom = 133.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
layout_mode = 0
offset_left = 15.0
offset_top = 138.0
offset_right = 257.0
offset_bottom = 161.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.820312, 0.291595, 0.291595, 1)

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[node name="Back" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 550.0
offset_top = 607.0
offset_right = 620.0
offset_bottom = 638.0
focus_neighbor_top = NodePath("../Multiplayer")
focus_neighbor_bottom = NodePath("../SinglePlayer")
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
text = "Exit
"

[node name="CSS" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="CSSPlayers" type="Control" parent="CSS"]
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="P1" type="Panel" parent="CSS/CSSPlayers"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0

[node name="Image" type="TextureRect" parent="CSS/CSSPlayers/P1"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("4_228fn")
expand_mode = 2

[node name="Text" type="Label" parent="CSS/CSSPlayers/P1"]
layout_mode = 0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 40
text = "P1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2" type="Panel" parent="CSS/CSSPlayers"]
layout_mode = 0
offset_left = 1024.0
offset_right = 1152.0
offset_bottom = 128.0

[node name="Image" type="TextureRect" parent="CSS/CSSPlayers/P2"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("4_228fn")

[node name="Text" type="Label" parent="CSS/CSSPlayers/P2"]
layout_mode = 0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 40
text = "P2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P3" type="Panel" parent="CSS/CSSPlayers"]
layout_mode = 0
offset_top = 520.0
offset_right = 128.0
offset_bottom = 648.0

[node name="Image" type="TextureRect" parent="CSS/CSSPlayers/P3"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("4_228fn")

[node name="Text" type="Label" parent="CSS/CSSPlayers/P3"]
layout_mode = 0
offset_top = -64.0
offset_right = 128.0
theme_override_font_sizes/font_size = 40
text = "P3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P4" type="Panel" parent="CSS/CSSPlayers"]
layout_mode = 0
offset_left = 1024.0
offset_top = 520.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Image" type="TextureRect" parent="CSS/CSSPlayers/P4"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("4_228fn")

[node name="Text" type="Label" parent="CSS/CSSPlayers/P4"]
layout_mode = 0
offset_top = -64.0
offset_right = 128.0
theme_override_font_sizes/font_size = 40
text = "P4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CSSPanel" type="TextureRect" parent="CSS"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -128.0
offset_right = 320.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_p88hc")

[node name="dokibird" type="TextureButton" parent="CSS/CSSPanel"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(4, 4)
texture_normal = ExtResource("2_6aldq")

[node name="dragoon" type="TextureButton" parent="CSS/CSSPanel"]
layout_mode = 2
offset_left = 128.0
offset_right = 160.0
offset_bottom = 32.0
scale = Vector2(4, 4)
texture_normal = ExtResource("3_xvjye")

[node name="chonkgoon" type="TextureButton" parent="CSS/CSSPanel"]
layout_mode = 2
offset_left = 256.0
offset_right = 288.0
offset_bottom = 32.0
scale = Vector2(4, 4)
texture_normal = ExtResource("4_228fn")

[node name="longoon" type="TextureButton" parent="CSS/CSSPanel"]
layout_mode = 2
offset_left = 384.0
offset_right = 416.0
offset_bottom = 32.0
scale = Vector2(4, 4)
texture_normal = ExtResource("5_adr2t")

[node name="eggoon" type="TextureButton" parent="CSS/CSSPanel"]
layout_mode = 2
offset_left = 512.0
offset_right = 544.0
offset_bottom = 32.0
scale = Vector2(4, 4)
texture_normal = ExtResource("3_lsque")

[node name="tomato" type="TextureButton" parent="CSS/CSSPanel"]
layout_mode = 2
offset_top = 124.0
offset_right = 32.0
offset_bottom = 156.0
scale = Vector2(4, 4)
texture_normal = ExtResource("7_iu1o4")

[node name="secret1" type="TextureButton" parent="CSS/CSSPanel"]
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 160.0
offset_bottom = 160.0
scale = Vector2(4, 4)
texture_normal = ExtResource("9_f5vrd")

[node name="secret2" type="TextureButton" parent="CSS/CSSPanel"]
layout_mode = 0
offset_left = 256.0
offset_top = 128.0
offset_right = 288.0
offset_bottom = 160.0
scale = Vector2(4, 4)
texture_normal = ExtResource("9_f5vrd")

[node name="secret3" type="TextureButton" parent="CSS/CSSPanel"]
layout_mode = 0
offset_left = 384.0
offset_top = 128.0
offset_right = 416.0
offset_bottom = 160.0
scale = Vector2(4, 4)
texture_normal = ExtResource("9_f5vrd")

[node name="secret4" type="TextureButton" parent="CSS/CSSPanel"]
layout_mode = 0
offset_left = 512.0
offset_top = 132.0
offset_right = 544.0
offset_bottom = 164.0
scale = Vector2(4, 4)
texture_normal = ExtResource("9_f5vrd")

[node name="Label" type="Label" parent="CSS"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -448.0
offset_right = 448.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 75
text = "CHARACTER SELECT"
horizontal_alignment = 1

[node name="Start2" type="Button" parent="CSS"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -69.0
offset_right = 129.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 46
text = "START!"

[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Players/FindPublicIP" to="." method="_on_find_public_ip_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CSS/Start2" to="." method="_on_start_pressed"]
